dark theme and links updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fábio Esteves - Personal Website</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -21,17 +21,17 @@
         journey on a newsletter for like-minded ambitious people (first link below).
       </p>
       <div class="social-links">
-        <a href="#" class="social-button newsletter">
+        <a href="https://fabioesteves.substack.com/" class="social-button newsletter">
           <i class="far fa-envelope"></i> Newsletter
         </a>
-        <a href="#" class="social-button linkedin">
+        <a href="https://www.linkedin.com/in/fabiodesteves/" class="social-button linkedin">
           <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a href="#" class="social-button instagram">
+        <a href="https://www.instagram.com/fabioafesteves/" class="social-button instagram">
           <i class="fab fa-instagram"></i> Instagram
         </a>
-        <a href="#" class="social-button twitter">
-          <i class="fab fa-twitter"></i> Twitter
+        <a href="https://x.com/fabiodesteves" class="social-button x">
+          <i class="fa-brands fa-x-twitter"></i> X
         </a>
       </div>
     </div>
