Refine description and links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
       <img src="IMG_0207.JPG" alt="Fabio Esteves" class="profile-image">
       <h1>Fábio Esteves</h1>
       <p class="bio">
-        I'm Fábio, a data analyst living in Lisbon, Portugal. Besides using data to increase my company's bottom line,
-        I'm also passionate about apps and development. I'm highly ambitious. The dream is to find a peaceful place
-        somewhere in the Mediterranean, where I can swim in crystal clear waters and play tennis every day. I share my
-        journey on a newsletter for like-minded ambitious people (first link below).
+        Hi! 👋 I'm Fábio, a data analyst living in Lisbon, Portugal. I help my company make better decisions by optimising credit processes (reducing risk, fraud, and automating decision-making). I'm also passionate about apps and development. Building tools that solve real problems feels like magic to me.
+      </p>
+      <p class="bio">
+        My dream is to settle in a peaceful Mediterranean town, swimming in crystal-clear waters and playing tennis every day. I document my journey — lessons, failures, and everything in between — in a newsletter for like-minded, ambitious people (first link below).
+      </p>
+      <p class="bio">
+        Feel free to get in touch!
       </p>
       <div class="social-links">
         <a href="https://fabioesteves.substack.com/" class="social-button newsletter">
@@ -27,11 +30,11 @@
         <a href="https://www.linkedin.com/in/fabiodesteves/" class="social-button linkedin">
           <i class="fab fa-linkedin"></i> LinkedIn
         </a>
-        <a href="https://www.instagram.com/fabioafesteves/" class="social-button instagram">
-          <i class="fab fa-instagram"></i> Instagram
+        <a href="https://github.com/fabiodesteves" class="social-button github">
+          <i class="fab fa-github"></i> GitHub
         </a>
-        <a href="https://x.com/fabiodesteves" class="social-button x">
-          <i class="fa-brands fa-x-twitter"></i> X
+        <a href="mailto:fabioaesteves@outlook.com" class="social-button email">
+          <i class="fas fa-envelope"></i> Email
         </a>
       </div>
     </div>
