Correct centering and justifications

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="profile">
       <img src="IMG_0207.JPG" alt="Fabio Esteves" class="profile-image">
-      <h1>Fábio Esteves</h1>
+      <h1 class="name">Fábio Esteves</h1>
       <p class="bio">
         Hi! 👋 I'm Fábio, a data analyst living in Lisbon, Portugal. I help my company make better decisions by optimising credit processes (reducing risk, fraud, and automating decision-making). I'm also passionate about apps and development. Building tools that solve real problems feels like magic to me.
       </p>
